<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:paddingHorizontal="24dp"
        android:text="@string/judul"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="24dp"
        android:text="@string/nrp"
        android:textSize="20sp"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/edt_input_nrp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginHorizontal="24dp"
        android:hint="@string/hint_inp_nrp"
        android:inputType="numberDecimal"
        android:textColor="@color/black"
        android:textColorHint="#303030"
        android:backgroundTint="@color/black" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="24dp"
        android:text="@string/nama"
        android:textSize="20sp"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/edt_input_nama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:hint="@string/hint_inp_nama"
        android:textColor="@color/black"
        android:textColorHint="#303030"
        android:backgroundTint="@color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="24dp"
        android:gravity="center" >

        <Button
            android:id="@+id/btn_simpan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:text="@string/btn_simpan"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:backgroundTint="#6A6B83" />

        <Button
            android:id="@+id/btn_ambil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:text="@string/btn_ambil"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:backgroundTint="#6A6B83" />

        <Button
            android:id="@+id/btn_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:text="@string/btn_update"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:backgroundTint="#6A6B83" />

        <Button
            android:id="@+id/btn_hapus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:text="@string/btn_hapus"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:backgroundTint="#6A6B83" />
    </LinearLayout>

</LinearLayout>